--- a/weather.html
+++ b/weather.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>amazon</title>
-    <link rel="stylesheet" href="amazon.css">
+    <link rel="stylesheet" href="weather.css">
 </head>
 
 <body>
@@ -128,7 +128,7 @@
             </div>
         </div>
     </header>
-    <script src="script/amazon.js"></script>
+    <script src="script/weather.js"></script>
 </body>
 
 </html>
