--- a/weather.html
+++ b/weather.html
@@ -9,125 +9,139 @@
 </head>
 
 <body>
-    <header class="wather_contaner">
-        <div class="in_hour_data_contaner">
-            <div class="first_main">
-                <div class="position">
-                    <div>
-                        <h2 class="maintain">The <span class="w_show">Raniy</span> wather</h2>
+    <div class="first_dive">
+
+        <header class="wather_contaner">
+            <div class="in_hour_data_contaner">
+                <div class="first_main">
+                    <div class="position">
+                        <div>
+                            <h2 class="maintain">The <span class="w_show">Raniy</span> wather</h2>
+                        </div>
+                        <div class="only_line">
+
+                        </div>
+                            <div class="position2">
+                                <div class="first">
+                                    <p class="time-1">09:00</p>
+                                    <img src="rainy small.png" class="rainy">
+                                    <p class="first-1">9 <span>°C</span></p>
+                                </div>
+                                <div class="first">
+                                    <p class="time-2">09:00</p>
+                                    <img src="rainy small.png" class="rainy">
+                                    <p class="first-2">9 <span>°C</span></p>
+                                </div>
+                                <div class="first">
+                                    <p class="time-3">09:00</p>
+                                    <img src="rainy small.png" class="rainy">
+                                    <p class="first-3">9 <span>°C</span></p>
+                                </div>
+                                <div class="first">
+                                    <p class="time-4">09:00</p>
+                                    <img src="rainy small.png" class="rainy">
+                                    <p class="first-4">9 <span>°C</span></p>
+                                </div>
+                                <div class="first">
+                                    <p class="time-5">09:00</p>
+                                    <img src="rainy small.png" class="rainy">
+                                    <p class="first-5">9 <span>°C</span></p>
+                                </div>
+                                <div class="first">
+                                    <p class="time-6">09:00</p>
+                                    <img src="rainy small.png" class="rainy">
+                                    <p class="first-6">9 <span>°C</span></p>
+                                </div>
+                                <div class="first">
+                                    <p class="time-7">09:00</p>
+                                    <img src="rainy small.png" class="rainy">
+                                    <p class="first-7">9 <span>°C</span></p>
+                                </div>
+                                <div class="first">
+                                    <p class="time-8">09:00</p>
+                                    <img src="rainy small.png" class="rainy">
+                                    <p class="first-8">9 <span>°C</span></p>
+                                </div>
+                                <div class="first">
+                                    <p class="time-9">09:00</p>
+                                    <img src="rainy small.png" class="rainy">
+                                    <p class="first-9">9 <span>°C</span></p>
+                                </div>
+                                <div class="first">
+                                    <p class="time-10">09:00</p>
+                                    <img src="rainy small.png" class="rainy">
+                                    <p class="first-10">9 <span>°C</span></p>
+                                </div>
+                            </div>
                     </div>
-                    <div class="position2"> 
-                        <div class="first">
-                            <p class="time-1">09:00</p>
-                            <img src="rainy small.png" class="rainy">
-                            <p class="first-1">9 <span>°C</span></p>
+                </div>
+            </div>
+            <div class="side_bar">
+                <!-- <h1>Check wather</h1> -->
+                <div>
+                    <!-- <img src="side bar.jpeg" class="side_bar_im"> -->
+                    <input type="text" name="" class="counry_nput">
+                    <button class="serch_btn">&#x1F50D;</button>
+                </div>
+                <div class="maintainence">
+                    <h1 class="maintane_temprature"><span class="t_show">30</span>°C</h1>
+                    <h4>strome : <span class="st_show"></span>km/h</h4>
+                </div>
+                <div class="country">
+                    <h2 class="country_show">Pakistan</h2>
+                </div>
+                <div class="jsb">
+        
+                </div>
+                <div>
+                    <h3 class="forcast">The Next 4 Days Forecast</h3>
+                </div>
+                <div class="days_Wheater">
+                    <div class="days_count">
+                        <div class="only_img_bg">
+                            <img src="rainy small.png" class="imge1">
                         </div>
-                        <div class="first">
-                            <p class="time-2">09:00</p>
-                            <img src="rainy small.png" class="rainy">
-                            <p class="first-2">9 <span>°C</span></p>
+                        <div class="border">
+                            <h4 class="date_1">Friday,April 2024</h4>
+                            <p class="condition_1">Heavy Rain</p>
                         </div>
-                        <div class="first">
-                            <p class="time-3">09:00</p>
-                            <img src="rainy small.png" class="rainy">
-                            <p class="first-3">9 <span>°C</span></p>
+                        <div class="min_max_temp">
+                            <p>9</p>
+                            <p>6</p>
                         </div>
-                        <div class="first">
-                            <p class="time-4">09:00</p>
-                            <img src="rainy small.png" class="rainy">
-                            <p class="first-4">9 <span>°C</span></p>
+                    </div>
+                    <div class="days_count">
+                        <div class="only_img_bg">
+                            <img src="rainy small.png" class="imge2">
                         </div>
-                        <div class="first">
-                            <p class="time-5">09:00</p>
-                            <img src="rainy small.png" class="rainy">
-                            <p class="first-5">9 <span>°C</span></p>
+                        <div>
+                            <h4 class="date_2">Friday,April 2024</h4>
+                            <p class="condition_2">Heavy Rain</p>
                         </div>
-                        <div class="first">
-                            <p class="time-6">09:00</p>
-                            <img src="rainy small.png" class="rainy">
-                            <p class="first-6">9 <span>°C</span></p>
+
+                    </div>
+                    <div class="days_count">
+                        <div class="only_img_bg">
+                            <img src="rainy small.png" class="imge3">
                         </div>
-                        <div class="first">
-                            <p class="time-7">09:00</p>
-                            <img src="rainy small.png" class="rainy">
-                            <p class="first-7">9 <span>°C</span></p>
+                        <div>
+                            <h4 class="date_3">Friday,April 2024</h4>
+                            <p class="condition_3">Heavy Rain</p>
                         </div>
-                        <div class="first">
-                            <p class="time-8">09:00</p>
-                            <img src="rainy small.png" class="rainy">
-                            <p class="first-8">9 <span>°C</span></p>
+                    </div>
+                    <div class="days_count">
+                        <div class="only_img_bg">
+                            <img src="rainy small.png" class="imge4">
                         </div>
-                        <div class="first">
-                            <p class="time-9">09:00</p>
-                            <img src="rainy small.png" class="rainy">
-                            <p class="first-9">9 <span>°C</span></p>
-                        </div>
-                        <div class="first">
-                            <p class="time-10">09:00</p>
-                            <img src="rainy small.png" class="rainy">
-                            <p class="first-10">9 <span>°C</span></p>
+                        <div>
+                            <h4 class="date_4">Friday,April 2024</h4>
+                            <p class="condition_4">Heavy Rain</p>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="side_bar">
-            <!-- <h1>Check wather</h1> -->
-            <div>
-                <!-- <img src="side bar.jpeg" class="side_bar_im"> -->
-                <input type="text" name="" class="counry_nput">
-                <button class="serch_btn">&#x1F50D;</button>
-            </div>
-            <div class="maintainence">
-                <h1 class="maintane_temprature"><span class="t_show">30</span>°C</h1>
-                <h4>strome : <span class="st_show"></span>km/h</h4>
-            </div>
-            <div class="country">
-                <h2 class="country_show">Pakistan</h2>
-            </div>
-            <div>
-                <h3 class="forcast">The Next 4 Days Forecast</h3>
-            </div>
-            <div class="days_Wheater">
-                <div class="days_count">
-                    <div class="only_img_bg">
-                        <img src="rainy small.png" class="imge1">
-                    </div>
-                    <div>
-                        <h4 class="date_1">Friday,April 2024</h4>
-                        <p class="condition_1">Heavy Rain</p>
-                    </div>
-                </div>
-                <div class="days_count">
-                    <div class="only_img_bg">
-                        <img src="rainy small.png" class="imge2">
-                    </div>
-                    <div>
-                        <h4 class="date_2">Friday,April 2024</h4>
-                        <p class="condition_2">Heavy Rain</p>
-                    </div>
-                </div>
-                <div class="days_count">
-                    <div class="only_img_bg">
-                        <img src="rainy small.png" class="imge3">
-                    </div>
-                    <div>
-                        <h4 class="date_3">Friday,April 2024</h4>
-                        <p class="condition_3">Heavy Rain</p>
-                    </div>
-                </div>
-                <div class="days_count">
-                    <div class="only_img_bg">
-                        <img src="rainy small.png" class="imge4">
-                    </div>
-                    <div>
-                        <h4 class="date_4">Friday,April 2024</h4>
-                        <p class="condition_4">Heavy Rain</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+        </header>
+    </div>
     <script src="script/weather.js"></script>
 </body>
 
