--- a/weather.html
+++ b/weather.html
@@ -142,7 +142,7 @@
             </div>
         </header>
     </div>
-    <script src="script/weather.js"></script>
+    <script src="weather.js"></script>
 </body>
 
 </html>
