--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>amazon</title>
-    <link rel="stylesheet" href="weather.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -142,7 +142,7 @@
             </div>
         </header>
     </div>
-    <script src="weather.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
